# ias_perception

./: README.md  rosdep.yaml  stack.xml
ann/: .gitignore  Makefile  ann_1.1.2.tar.gz.md5sum  distance.patch  gcc43_shared.patch  manifest.xml
cognitive_perception/: .gitignore  CMakeLists.txt  cop_doc.yaml  mainpage.dox  manifest.xml
cognitive_perception/include/: Algorithm.h  AlgorithmEval.h  AlgorithmSelector.h  AttentionAlgorithm.h  AttentionManager.h  BoostUtils.h  Class.h  Comm.h  Descriptor.h  Elem.h  ElemTypes.h  File.h  GeometricShape.h  ImageInputSystem.h  LocateAlgorithm.h  LogFile.h  NamedDescriptor.h  Object.h  PerceptionPrimitive.h  ProveAlgorithm.h  ROSComm.h  ROSjloComm.h  Reading.h  RefineAlgorithm.h  RelPose.h  RelPoseFactory.h  RemoteAttention.h  Sensor.h  Signature.h  SignatureDB.h  SmartAlgorithmSelectionLocate.h  Statistics.h  TrackAlgorithm.h  VisFinder.h  VisLearner.h  XMLTag.h  YarpComm.h  YarpRpcComm.h  cop.h  himage2iplimage.h
cognitive_perception/src/: Algorithm.hpp  AlgorithmEval.cpp  AlgorithmSelector.hpp  AttentionAlgorithm.cpp  AttentionManager.cpp  Class.cpp  Descriptor.cpp  Elem.cpp  File.cpp  ImageInputSystem.cpp  LocateAlgorithm.cpp  LogFile.cpp  Object.cpp  PerceptionPrimitive.cpp  ProveAlgorithm.cpp  ROSComm.cpp  ROSjloComm.cpp  Reading.cpp  RefineAlgorithm.cpp  RelPose.cpp  RelPoseFactory.cpp  Sensor.cpp  Signature.cpp  SignatureDB.cpp  Statistics.cpp  TrackAlgorithm.cpp  VisFinder.cpp  VisLearner.cpp  XMLTag.cpp  main.cpp
contracting_curve_density_algorithm/: CMakeLists.txt  ccd_params.xml  mainpage.dox  manifest.xml
contracting_curve_density_algorithm/include/ccd/: auto_init.h  bspline.h  ccd.h  sift_init.h
contracting_curve_density_algorithm/src/: Makefile  auto_init.cpp  bspline.cpp  ccd.cpp  ccd.h  ccd_node.cpp  ccd_node2.cpp  ccd_params.xml  ccd_tracker.cpp  contour.cpp  contour.xml  curve.cpp  em.cpp  kmeans.cpp  matrix.cpp  openCV_to_ros.cpp  sift.c  sift_init.c  sift_init.cpp  snake.cpp  test.cpp  test2.cpp
cop_collision_interface/: CMakeLists.txt  mainpage.dox  manifest.xml
cop_collision_interface/include/: CollisionInterface.h
cop_collision_interface/src/: CollisionInterface.cpp  main.cpp
cop_ros_plugins/: CMakeLists.txt  cop_subscribes_TableObjects.xml  debug_cop.launch  logfile.txt  manifest.xml  plugins.xml  test_debug_cop.launch
cop_ros_plugins/include/: DetectedFace.h  FaceDetection.h  ImageSubscription.h  IplImageReading.h
cop_ros_plugins/src/: DetectedFace.cpp  FaceDetection.cpp  ImageSubsrciption.cpp  IplImageReading.cpp  PlugInRegister.cpp  TableObjectDescriptors.cpp
cop_sr4_plugins/: CMakeLists.txt  manifest.xml  plugins.xml
jlo/: .gitignore  CMakeLists.txt  icub_jlo.launch  jlo.launch  lo-init-icub.ini  lo-init.ini  manifest.xml
jlo/src/: RosLoService.cpp  RosLoService.h  main.cpp
lo/: .build_version  .gitignore  CMakeLists.txt  LocatedObject.cpp  Makefile  NewMatExhaustive.cpp  ObjectContainer.cpp  README  ServiceInterface.cpp  UT_Timer.cpp  YarpService.cpp  liblo.pc.in  lo-config.ini  manifest.xml  test.cpp
lo/include/lo/: LocatedObject.h  NewMatExhaustive.h  ObjectContainer.h  ServiceInterface.h  ServiceLocatedObject.h  UT_Timer.h  YarpService.h  lo.h
lo/include/lo/NewMat/: Array.h  BandMatrix.h  BaseMatrix.h  CroutMatrix.h  DiagonalMatrix.h  Functions.h  GeneralMatrix.h  GenericMatrix.h  IdentityMatrix.h  LinearEquationSolver.h  Matrix.h  MatrixExceptions.h  MatrixInput.h  RectMatrix.h  SquareMatrix.h  SubMatrix.h  SymmetricMatrix.h  Temporary.h  TriangularMatrix.h  Vector.h  general.h  include.h  myexcept.h  nricMatrix.h  utils.h
lo/include/lo/wrapped/: Matrix.h
zbar/: Makefile  manifest.xml  rosdep.yaml
zbar_barcode_reader_node/: CMakeLists.txt  manifest.xml  rosdep.yaml
zbar_barcode_reader_node/launch/: barcode_reader.launch
zbar_barcode_reader_node/src/: curl_opencv.cpp  tinyxml.cpp  zbar_barcode_reader.c  zbar_barcode_reader_node.cpp  zbar_image_reader.cpp  zbar_image_reader_client.cpp
zbar_barcode_reader_node/srv/: enable_barcode_reader.srv
zbar_qt_ros/: CMakeLists.txt  mainpage.dox  manifest.xml
zbar_qt_ros/src/: CQTImageConvertor.cpp  CQTImageConvertor.h  main.cpp  ui_zbargui.h  zbargui.cpp  zbargui.h  zbargui.ui
